# AI_price

./: .env.example  .gitignore  README.md  REFACTORING_NOTES.md  check_redis.py  main.py  main_v2.py  pricing_v2_2026-05-02.json  pyproject.toml  requirements.txt  test_requirements.py  test_v3.py
adapters/: __init__.py  _base.py  ctrip_adapter.py  feizhu_adapter.py  meituan_adapter.py  miniapp_adapter.py
api/: main.py
config/: settings.py
dashboard/: app.py  monitor_app.py  settings.py
data/: __init__.py  data_loader.py  mock_data.py
docs/: ai_pricing_platform_pitch.pptx  ai_pricing_platform_pitch_v3.pptx
engine/: __init__.py  backtest_experiment.py  bundle_optimizer.py  capacity_manager.py  channel_pricer.py  pricing_engine.py  pricing_engine_v3.py  time_slot_pricing.py
models/: __init__.py  continuous_rl.py  demand_forecaster.py  ensemble_forecaster.py  feature_engineer.py  feature_service.py  gnn_attraction_graph.py  nlp_reporter.py  park_env.py  ppo_pricer.py  quantile_forecaster.py  rl_pricer.py  rl_pricer_v2.py  shift_detector.py  shift_detector_v2.py  sliding_window.py
monitor/: __init__.py  alert_engine.py  prediction_monitor.py
scripts/: dev_commands.ps1  redis_e2e_check.py  shadow_backtest_30d.py  start_all.sh
services/: __init__.py  ab_test_manager.py  champion_challenger.py  circuit_breaker.py  incremental_trainer.py  inference_http_service.py  inference_runtime.py  input_validator.py  message_bus.py  price_sync_service.py  pricing_subscriber.py  risk_guard.py  rl_inference_opt.py  rl_logger.py  turnstile_daemon.py  weather_daemon.py
(+16 files in other folders)
